Errors
getFieldErrors() : 필드별 전체 에러 정보

getGlobalErrors() : 커맨드 객체 자체 에러 정보 (reject(…)..)

getAllErrors() : 전체 에러 정보

Swagger API

UriComponentsBuilder

RestTemplate

1. <T> ResponseEntity<T> getForEntity(...)
2. <T> T getForObject
3. <T> ResponseEntity<T> postForEntity
4. <T> T postForObject
5. <T> ResponseEntity<T> exchange(...)