@@ -1,9 +1,9 @@
 package org.choongang.global;
 
-import io.micrometer.common.util.StringUtils;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.MessageSource;
+import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.stereotype.Component;
 import org.springframework.validation.Errors;
 import org.springframework.validation.FieldError;
@@ -22,6 +22,8 @@ public class Utils {
 
     public Map<String, List<String>> getErrorMessages(Errors errors) {
         // FieldErrors
+
+
         Map<String, List<String>> messages = errors.getFieldErrors()
                 .stream()
                 .collect(Collectors.toMap(FieldError::getField, e -> getCodeMessages(e.getCodes())));
@@ -31,18 +33,29 @@ public class Utils {
                 .stream()
                 .flatMap(e -> getCodeMessages(e.getCodes()).stream()).toList();
 
-        messages.put("global", gMessages);
-
+        if (!gMessages.isEmpty()) {
+            messages.put("global", gMessages);
+        }
         return messages;
     }
 
 
     public List<String> getCodeMessages(String[] codes) {
+        ResourceBundleMessageSource ms = (ResourceBundleMessageSource) messageSource;
+        ms.setUseCodeAsDefaultMessage(false);
+
         List<String> messages = Arrays.stream(codes)
-                .map(c -> messageSource.getMessage(c, null, request.getLocale()))
-                .filter(s -> !StringUtils.isBlank(s))
+                .map(c -> {
+                    try {
+                        return ms.getMessage(c, null, request.getLocale());
+                    } catch (Exception e) {
+                        return "";
+                    }
+                })
+                .filter(s -> s != null && !s.isBlank())
                 .toList();
 
+        ms.setUseCodeAsDefaultMessage(true);
         return messages;
     }
 }
